--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project">
-
+    <!-- AndroidManifest.xml 파일은 앱의 전체적인 설정, 권한, 그리고 중요한 컴포넌트를 정의한다. -->
+    <!-- 파일의 첫째 줄은 xml 문서라는 것 선언 UTF-8 인코딩 사용, com.example.project는 이 애플리케이션의 고유 이름, 패키지 앱 식별 시 사용 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +10,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <!-- ACCESS_FINE_LOCATION/ACCESS_COARSE_LOCATION : 권한은 GPS 및 네트워크 기반 위치 접근 권한을 요청한다. 이로 인해 사용자 위치를 정확히 또는 대략적으로 추적할 수 있다.
+         INTERNET : 권한은 인터넷 연결 권한을 요청한다. 앱이 네트워크와 상호작용할 수 있다.
+         ACCESS_NETWORK_STATE : 권한은 네트워크 상태(예: Wi-Fi 또는 모바일 데이터 연결)를 확인할 수 있는 권한이다.
+         WRITE_EXTERNAL_STORAGE/READ_EXTERNAL_STORAGE : 권한은 외부 저장소에 쓰고 읽을 수 있는 권한을 요청한다. 앱이 사진, 파일 등을 저장하거나 접근할 수 있다.
+         CAMERA : 카메라 사용 권한을 요청한다. 이 권한은 사진 촬영이나 비디오 녹화에 사용된다.-->
     <application
         android:allowBackup="true"
         android:largeHeap="true"
@@ -20,10 +25,19 @@
         android:theme="@style/Theme.Project"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config">
+        <!-- allowBackup="true" : 사용자의 데이터를 백업할 수 있도록 허용한다. 앱이 재설치되거나 기기가 초기화될 때 데이터가 복원될 수 있다.
+             largeHeap="true" : 앱이 더 큰 힙 메모리 공간을 요청할 수 있게 한다. 이미지 처리나 대용량 데이터를 다룰 때 유용할 수 있다.
+             icon="@drawable/icon"/roundIcon="@drawable/icon" : 앱의 아이콘과 라운드 아이콘을 설정한다. @drawable/icon은 res/drawable 디렉토리 내의 이미지 리소스를 참조한다.
+             label="WHERE" : 앱의 이름을 "WHERE"로 설정한다.
+             supportsRtl="true" : 앱이 RTL(오른쪽에서 왼쪽으로 쓰는 언어)을 지원한다.
+             theme="@style/Theme.Project" : 앱의 기본 테마를 res/values/styles.xml에 정의된 Theme.Project로 설정한다.
+             usesCleartextTraffic="true" : 앱이 HTTP와 같은 명확한 텍스트 트래픽을 허용한다. HTTPS가 아닌 URL에 접근할 수 있다.
+             networkSecurityConfig="@xml/network_security_config" : 네트워크 보안 구성을 정의한 XML 파일을 참조한다. 이 파일은 res/xml/ 디렉토리에 위치해야 한다.-->
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/file_paths" />
-
+        <!-- name="com.google.android.actions": 앱이 특정 Google 기능이나 액션을 사용할 수 있음을 정의한다.
+             resource="@xml/file_paths": res/xml/ 디렉토리에 있는 file_paths.xml 파일을 참조한다. 이 파일은 파일 경로를 정의하는 데 사용된다.-->
         <activity android:name=".splash"
             android:configChanges="screenSize|orientation">
             <intent-filter>
@@ -32,6 +46,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- name=".splash" : 이 액티비티는 splash 화면을 담당한다. 시작 화면이자 앱이 실행될 때 처음 표시되는 화면이다.
+             configChanges="screenSize|orientation": 화면 크기나 방향이 변경될 때 이 액티비티가 다시 시작되지 않도록 한다.
+             <intent-filter> : 이 액티비티가 앱의 진입점임을 지정한다. MAIN 액션과 LAUNCHER 카테고리는 이 액티비티가 앱의 메인 런처 화면임을 의미한다.-->
         <activity android:name=".Title"
             android:configChanges="screenSize|orientation"/>
         <activity android:name=".GasStation"
@@ -44,8 +61,7 @@
             android:configChanges="screenSize|orientation"/>
         <activity android:name=".CarCenter"
             android:configChanges="screenSize|orientation"/>
-
-
+        <!-- activity 정의 -->
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="fcyje1ke1w" />
@@ -66,6 +82,10 @@
                 android:resource="@xml/file_paths" />
 
         </provider>
+        <!-- com.naver.maps.map.CLIENT_ID : 이 메타데이터는 네이버 지도 API의 클라이언트 ID를 정의합니다. CLIENT_ID, CLIENT_TYPE 등의 값이 설정되어 있어 네이버 지도를 사용하려는 의도를 보여준다.
+             <provider> 태그 : 이 프로바이더는 파일을 앱 간에 안전하게 공유하기 위해 설정되었다. FileProvider는 앱이 외부 저장소의 파일을 다른 앱과 안전하게 공유할 수 있도록 도와준다.
+             exported="false" : 이 프로바이더는 다른 앱에서 접근할 수 없도록 설정되었습니다.
+             grantUriPermissions="true" : 특정 URI에 대한 권한을 다른 앱에 부여할 수 있도록 허용합니다.-->
     </application>
 
 </manifest>
